--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -3,6 +3,7 @@ body {
   font-optical-sizing: auto;
   font-style: normal;
   font-variation-settings: 'wdth' 100;
+  background-color: var(--p-zinc-900);
 }
 
 h1,
